frontend/k8s/green-app.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gt-green
spec:
  selector:
    app: gt-green
  ports:
    - port: 80
      targetPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gt-green
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gt-green
  template:
    metadata:
      labels:
        app: gt-green
    spec:
      containers:
        - name: gt-green
          image: gabtec/green:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 80
