frontend/k8s/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-host
spec:
  ingressClassName: nginx
  rules:
    - host: 'blue.127.0.0.1.nip.io'
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: gt-blue
                port:
                  number: 80
    - host: 'green.127.0.0.1.nip.io'
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: gt-green
                port:
                  number: 80
